--- a/project.json
+++ b/project.json
@@ -15,6 +15,10 @@
         "src/resource.js",
         "src/app.js",
         "src/TransitionLayer.js",
+        "src/AudioFontLayer.js",
+        "src/EventsLayer.js",
+        "src/AnimationLayer.js",
+        "src/ActionsLayer.js",
         "src/SceneLayer.js",
         "src/DirectorLayer.js"
     ]
